--- a/src/main/resources/templates/createMusician.html
+++ b/src/main/resources/templates/createMusician.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="includes :: indexHead"></head>
 <body>
-<div th:include="navbar :: nav"></div>
-<main class="container">
+<div th:include="navbar :: navHome"></div>
+<main th:inline="text" class="container">
     <form th:action="@{/signup/musician/}" method="post"  >
         <div th:object="${user}">
             <div class="row">
@@ -42,45 +42,23 @@
                 </div>
 
             </div>
+            <div class="input-field col s12">
+                <select multiple="multiple" th:field="*{musicianInstruments}">
+                    <option value="" disabled="disabled" selected="selected">Choose Musical Instruments</option>
+                    <option th:each="instrument : ${instruments}" th:value="${instrument.name}">[[${instrument.name}]]</option>
+                </select>
 
-                <div class="input-field col s12">
-                    <select multiple="multiple" th:field="*{musicianInstruments}">
-                        <option value="" disabled="disabled" selected="selected">Choose Musical Instruments</option>
-                        <option value="singer">Singer</option>
-                        <option value="accordion">Accordion</option>
-                        <option value="acoustic guitar">Acoustic Guitar</option>
-                        <option value="bagpipes">Bagpipes</option>
-                        <option value="banjo">Banjo</option>
-                        <option value="bass guitar">Bass Guitar</option>
-                        <option value="bassoon">Bassoon</option>
-                        <option value="bongo">Bongo</option>
-                        <option value="cello">Cello</option>
-                        <option value="clarinet">Clarinet</option>
-                        <option value="didgeridoo">Didgeridoo</option>
-                        <option value="drum">Drums</option>
-                        <option value="electric guitar">Electric Guitar</option>
-                        <option value="flute">Flute</option>
-                        <option value="french horn">French Horn</option>
-                        <option value="harmonica">Harmonica</option>
-                        <option value="Harp">Harp</option>
-                        <option value="keyboard">Keyboard</option>
-                        <option value="mandolin">Mandolin</option>
-                        <option value="marimba">Marimba</option>
-                        <option value="oboe">Oboe</option>
-                        <option value="organ">Organ</option>
-                        <option value="piano">Piano</option>
-                        <option value="saxophone">Saxophone</option>
-                        <option value="trombone">Trombone</option>
-                        <option value="trumpet">Trumpet</option>
-                        <option value="tuba">Tuba</option>
-                        <option value="ukulele">Ukulele</option>
-                        <option value="violoa">Viola</option>
-                        <option value="violin">Violin</option>
-
-                    </select>
-
-                </div>
-
+            </div>
+            <div class="input-field col s6">
+                <input id="city" type="text" name="musicianCity"/>
+                <label for="city">City</label>
+            </div>
+            <div class="input-field col s3">
+                <select name="musicianState" id="state">
+                    <option value="" disabled="disabled" selected="selected">State</option>
+                    <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
+                </select>
+            </div>
             <div class="row">
                 <div class="input-field col s12">
                     <label for="location">Location</label>
@@ -97,15 +75,6 @@
                 <div class="input-field col s12">
                     <label for="birthDate">BirthDate</label>
                     <input id="birthDate" type="date" class="datepicker" th:field="*{birthDate}"/>
-                </div>
-            </div>
-            <div class="file-field input-field">
-                <div class="btn">
-                    <span>File</span>
-                    <input type="file"/>
-                </div>
-                <div class="file-path-wrapper">
-                    <input th:field="*{picImage}" class="file-path validate" type="text"/>
                 </div>
             </div>
         </div>
