--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -3,34 +3,44 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="includes :: indexHead"></head>
 <body>
-<div th:fragment="nav">
+<div th:fragment="navHome">
     <header class="navbar-fixed">
-        <ul id="dropdown1" class="dropdown-content">
-            <li><a href="#!">one</a></li>
-            <li><a href="#!">two</a></li>
-            <li class="divider"></li>
-            <li><a href="#!">three</a></li>
-        </ul>
-        <nav>
-            <div class="blue nav-wrapper">
+        <nav class="blue">
+            <div class="container nav-wrapper">
                 <a href="/" class="brand-logo">gigFinder</a>
 
                 <ul class="right hide-on-med-and-down">
                     <li><a th:href="@{/home/find-gigs}">Find a Gig</a></li>
                     <li><a th:href="@{/home/find-bands}">Find a Band</a></li>
                     <li><a class="modal-trigger orange accent-4" href="#signupModal">Sign In</a></li>
-                    <li>
-                        <form th:action="@{/logout}" method="post">
-                        <input class="btn" type="submit" value="LOGOUT"/>
-                        </form>
-                    </li>
-                    <!-- Dropdown Trigger -->
-                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
                 </ul>
             </div>
         </nav>
     </header>
+</div>
+<div th:fragment="navUser">
+    <header class="navbar-fixed">
+        <ul id="dropdown1" class="dropdown-content">
+            <li>
+                <form th:action="@{/logout}" method="post">
+                    <input class="btn-flat" type="submit" value="LOGOUT"/>
+                </form>
+            </li>
 
+        </ul>
+        <nav class="blue">
+            <div class=" container nav-wrapper">
+                <a href="/" class="brand-logo">gigFinder</a>
+
+                <ul class="right hide-on-med-and-down">
+                    <li><a th:href="@{/home/find-gigs}">Find a Gig</a></li>
+                    <li><a th:href="@{/home/find-bands}">Find a Band</a></li>
+                    <!-- Dropdown Trigger -->
+                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1" ><span th:text="'@' + ${user.username}"></span><i class="material-icons right">arrow_drop_down</i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </div>
 
 </body>
